# localmaster

./: .gitignore  HANDOFF.md  LICENSE  Makefile  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md
.claude/handoffs/: 2026-07-05-localmaster-build-day.md
.design/: localmaster-desktop.md  localmaster-desktop.theme.css
.github/workflows/: ci.yml
apps/audio-engine/: pyproject.toml
apps/audio-engine/src/localmaster_engine/: __init__.py  analysis.py  audio_io.py  batch.py  export.py  pipeline.py  presets.py  reports.py
apps/audio-engine/src/localmaster_engine/chain/: __init__.py  compressor.py  dc_offset.py  dither.py  eq.py  highpass.py  limiter.py  loudness.py  reference.py  saturation.py  stereo.py
apps/audio-engine/src/localmaster_engine/server/: app.py  jobs.py
apps/audio-engine/tests/: conftest.py  test_analysis.py  test_batch.py  test_chain_units.py  test_export_and_reports.py  test_no_network.py  test_pipeline.py  test_reference.py  test_server.py  test_silence_and_trim.py  test_synthetic_fixtures.py
apps/audio-engine/tools/: assert_no_network.py  build_sidecar.sh  engine_entry.py  gen_synthetic.py
apps/desktop/: index.html  package-lock.json  package.json  plugins.example.json  tsconfig.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: localmaster-engine-aarch64-apple-darwin
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: distribute.rs  engine.rs  lib.rs  main.rs
docs/: AUDIO_ENGINE.md  DJ_EXPORT_GUIDE.md
examples/: README.md
(+72 files in other folders)
