[package]
name = "localmaster"
version = "0.1.0"
description = "LocalMaster desktop shell"
edition = "2021"
rust-version = "1.77"

[lib]
name = "localmaster_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "localmaster"
path = "src/main.rs"
